Minor Config changes for Tests and Demo Test added.