@@ -29,7 +29,23 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <tests>ut</tests>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>ut</id>
+            <properties>
+                <tests>ut</tests>
+            </properties>
+        </profile>
+        <profile>
+            <id>it</id>
+            <properties>
+                <tests>it</tests>
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
@@ -43,6 +59,14 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-ea -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+                    <groups>${tests}</groups>
                 </configuration>
             </plugin>
         </plugins>
